manifest/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kws-prod
  namespace: kws-prod
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: kws-prod
  template:
    metadata:
      labels:
        app: kws-prod
    spec:
      containers:
      - name: kws-prod
        image: CHANGE-IMAGE-NAME
        
        ports:
        - containerPort: 80
