manifest/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kws-prod-service
  namespace: kws-prod
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: kws-prod
